--- a/templates/submit_midterm.html
+++ b/templates/submit_midterm.html
@@ -50,7 +50,7 @@
             </div>
 
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-12">
                     <div class="card mb-4">
                         <div class="card-header">
                             <h5>Assignment Details</h5>
@@ -70,8 +70,10 @@
                             <div class="form-text">Upload your completed Excel workbook with the assigned sheets filled out</div>
                         </div>
 
-                        <button type="submit" class="btn btn-success">Submit Mid-Term</button>
-                        <a href="{{ url_for('student_midterms') }}" class="btn btn-secondary">Cancel</a>
+                        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                            <a href="{{ url_for('student_midterms') }}" class="btn btn-secondary me-md-2">Cancel</a>
+                            <button type="submit" class="btn btn-success">Submit Mid-Term</button>
+                        </div>
                     </form>
                 </div>
             </div>
